support updated pandoc meta, avoid conflict with abstract
1. Around pandoc v17.2 the json format changed, this is now supported
2. _.template changed, that fixed too
3. Looks like there is built in support for abstract, so now the meta
   name is  for the title page to avoid outputing two

fixes #1

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/mvhenderson/pandoc-docx-title",
   "dependencies": {
-    "lodash": "~2.4.1",
-    "pandoc-filter": "~0.1.2"
+    "lodash": "^4.17.4",
+    "pandoc-filter": "^0.1.8"
   }
 }
