--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "pandoc-filter": "^0.1.8"
+  },
+  "devDependencies": {
+    "np": "^2.16.0"
   }
 }
